--- a/frontend/f29/package.json
+++ b/frontend/f29/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "axios": "^1.6.8",
+    "next": "14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@tailwindcss/typography": "^0.5.7",
+    "@headlessui/react": "^1.7.7",
+    "react-icons": "^4.8.0",
+    "@heroicons/react": "^2.0.13",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
