--- a/frontend/f29/package.json
+++ b/frontend/f29/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "f29",
+  "name": "authapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "autoprefixer": "10.4.14",
+    "bcryptjs": "^2.4.3",
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.12",
+    "mongoose": "^7.4.1",
+    "next": "13.4.12",
+    "next-auth": "^4.22.3",
+    "postcss": "8.4.27",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.3"
   }
 }
