--- a/frontend/f29/package.json
+++ b/frontend/f29/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.13",
+    "@fullcalendar/interaction": "^6.1.13",
+    "@fullcalendar/timegrid": "^6.1.13",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "mongoose": "^7.4.1",
-    "next": "13.4.12",
+    "next": "^14.2.3",
     "next-auth": "^4.22.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
