--- a/frontend/f29/package.json
+++ b/frontend/f29/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fullcalendar/daygrid": "^6.1.13",
     "@fullcalendar/interaction": "^6.1.13",
     "@fullcalendar/timegrid": "^6.1.13",
@@ -18,10 +22,11 @@
     "bootstrap": "^5.3.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^11.2.6",
     "mongoose": "^7.4.1",
     "next": "^14.2.3",
     "next-auth": "^4.22.3",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.3"
