--- a/frontend/f29/package.json
+++ b/frontend/f29/package.json
@@ -13,9 +13,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fullcalendar/daygrid": "^6.1.13",
-    "@fullcalendar/interaction": "^6.1.13",
-    "@fullcalendar/timegrid": "^6.1.13",
+    "@fullcalendar/daygrid": "^6.1.14",
+    "@fullcalendar/interaction": "^6.1.14",
+    "@fullcalendar/react": "^6.1.14",
+    "@fullcalendar/timegrid": "^6.1.14",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
@@ -28,7 +29,9 @@
     "next-auth": "^4.22.3",
     "postcss": "^8.4.38",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.3.3"
   }
 }
