--- a/frontend/f29/package.json
+++ b/frontend/f29/package.json
@@ -21,9 +21,11 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^11.2.6",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^7.4.1",
     "next": "^14.2.3",
     "next-auth": "^4.22.3",
